# utf8-test

./: CMakeLists.txt  README.md
CMakeModules/: FindDirent.cmake
build.x64/: .gitignore  build-me.bat  debug.txt  run-chk.bat  updexes.bat
data/: Chinese2.html  Chinese2U.html  Tidy-004-chineseU.txt  utf8.html  utf8.txt
src/: chk-BOM.cxx  chk-con.cxx  chk-utf8.cxx  langdict.cxx  langdict.h  uni2utf8.cxx  unicode_utf8.cc  utf8-test.cxx
